--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simplify",
-  "version": "1.0.2",
+  "version": "1.1.2-test",
   "description": "",
   "main": "index.js",
   "scripts": {
