--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simplify",
-  "version": "1.1.7-test",
+  "version": "1.1.8",
   "description": "",
   "main": "index.js",
   "scripts": {
