--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "react-simplify",
   "version": "1.5.8",
-  "description": "",
+  "description": "Simplifying life of React coders",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --project tsconfig.json"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Iuriiiii/react-simplify.git"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Iuriiiii",
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.0.17",
