--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-simplify",
-  "version": "1.6.13",
+  "version": "1.6.14",
   "description": "Simplifying life of React coders",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "build:next": "tsc --project tsconfig.json",
     "build:common": "tsc --project tsconfig.common.json",
